--- a/android/app/src/main/res/layout/activity_profession_info.xml
+++ b/android/app/src/main/res/layout/activity_profession_info.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFEEF5"
     tools:context=".view.academicianView.ProfessionInfoActivity">
 
     <!--Header-->
@@ -27,11 +27,11 @@
             android:id="@+id/gotoAcademician"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="13dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="13dp"
             android:onClick="goToProfile"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_gravity="center_vertical"
             tools:ignore="OnClick" />
 
         <TextView
@@ -49,129 +49,114 @@
 
     <!--ScrollView-->
     <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView5"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:fillViewport="true">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView5">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:gravity="top"
             android:orientation="vertical"
             android:paddingTop="16dp"
             android:paddingBottom="32dp">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                app:layout_constraintBottom_toBottomOf="parent"
+
+            <TextView
+                android:id="@+id/textViewProfession"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="Yeni Uzmanlık Alanı"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="340dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="5dp"
+                android:text="Lütfen uzmanlık alanlarınızı giriniz ve Ekle butonuna basınız!"
+                android:textColor="#8A8585"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/professionText"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/edittext_bg"
+                android:inputType="text"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal" />
+
+
+            <Button
+                android:id="@+id/addInfo"
+                android:layout_width="360dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="5dp"
+                android:backgroundTint="#1A9AAF"
+                android:elevation="8dp"
+                android:text="Ekle"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:translationZ="4dp"
+                app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
+                tools:layout_editor_absoluteY="368dp" />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="135dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="15dp"
+                android:text="Eklenen Uzmanlık Alanları"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+
+            <LinearLayout
+                android:id="@+id/professionInfoContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginBottom="400dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewProfession"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialCardView"
-                    android:layout_width="275dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="169dp"
-                    android:text="Uzmanlık Alanlarınızı Giriniz"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/warning"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialCardView"
-                    android:layout_width="320dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="169dp"
-                    android:text="Lütfen verileri tek bir şekilde girip ekle butonuna basınız!"
-                    android:textColor="#8A8585"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/professionText"
-                    android:layout_width="360dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edittext_bg"
-                    android:gravity="start|top"
-                    android:inputType="text"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="normal" />
-
-
-                <Button
-                    android:id="@+id/addInfo"
-                    android:layout_width="360dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:backgroundTint="#1A9AAF"
-                    android:elevation="8dp"
-                    android:fontFamily="monospace"
-                    android:text="Ekle"
-                    android:textColor="#FFFFFF"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:translationZ="4dp"
-                    tools:layout_editor_absoluteY="368dp"
-                    app:cornerRadius="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
+                    android:id="@+id/txtNoProfession"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="7dp"
-                    android:layout_marginStart="15dp"
-                    android:text="Uzmanlık Alanları"
-                    android:textColor="#000000"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:layout_gravity="start"
+                    android:text="📭 Henüz hiç firma bilgisi eklenmemiş"
+                    android:textColor="#626161"
+                    android:textSize="15sp" />
 
-                <LinearLayout
-                    android:id="@+id/professionInfoContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txtNoProfession"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:textSize="15sp"
-                        android:textColor="#626161"
-                        android:text="📭 Henüz hiç uzmanlık alanı eklenmemiş"/>
-
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
