--- a/android/app/src/main/res/drawable/description_background.xml
+++ b/android/app/src/main/res/drawable/description_background.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid android:color="#F2F2F2" /> <!-- Açık gri arka plan -->
+    <corners android:radius="8dp" />
+</shape>
