--- a/android/app/src/main/res/layout/activity_academician_preview.xml
+++ b/android/app/src/main/res/layout/activity_academician_preview.xml
@@ -8,7 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".view.academicianView.AcademicianPreviewActivity">
 
-
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -25,7 +24,7 @@
 
 
         <ImageView
-            android:id="@+id/prevPage"
+            android:id="@+id/previewBackBtn"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
@@ -37,12 +36,13 @@
 
 
         <TextView
+            android:id="@+id/previewHeaderTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Akademisyen Ata"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
