--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topBanner">
 
-        <!-- Üst Alan: Mail, Şifre, Giriş, Geri Dön -->
+        <!--Üst Alan-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -202,7 +202,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="30dp"
+                    android:layout_width="31dp"
                     android:layout_height="30dp"
                     android:src="@drawable/google"
                     android:contentDescription="Google Logo"
@@ -250,6 +250,7 @@
                 android:textStyle="bold"
                 tools:ignore="OnClick" />
         </LinearLayout>
+
     </LinearLayout>
 
 
