--- a/android/app/src/main/res/layout/activity_old_requests.xml
+++ b/android/app/src/main/res/layout/activity_old_requests.xml
@@ -47,27 +47,20 @@
             android:textStyle="bold"/>
     </com.google.android.material.card.MaterialCardView>
 
-
     <!-- İçerik Alanı -->
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/oldRequestRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fillViewport="true"
+        android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/materialCardView"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="16dp"
-            android:paddingBottom="32dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
-        </LinearLayout>
-    </ScrollView>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:clipToPadding="false"
+        android:overScrollMode="always"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_request_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
