--- a/android/app/src/main/res/layout/item_request.xml
+++ b/android/app/src/main/res/layout/item_request.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/oldRequestTitle"
+                android:id="@+id/titleRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Talep Başlığı"
@@ -28,7 +28,7 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/oldDetailIcon"
+                android:id="@+id/iconDetail"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
                 android:layout_alignParentEnd="true"
@@ -39,7 +39,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/oldRequestMessage"
+            android:id="@+id/messageRequest"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
@@ -65,7 +65,7 @@
                 android:tint="#888888" />
 
             <TextView
-                android:id="@+id/oldRequestDate"
+                android:id="@+id/dateRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="22.07.2025"
@@ -82,7 +82,7 @@
             android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/oldCategoryContainer"
+                android:id="@+id/containerCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
