--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/pendingRequestAcademicianFragment"
+        android:icon="@drawable/baseline_comment_24"/>
     <item
         android:id="@+id/previewFragment"
         android:icon="@drawable/baseline_home_24"/>
